[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Title_Screen.gd" type="Script" id=1]
[ext_resource path="res://images/sprites/logo_game.png" type="Texture" id=2]
[ext_resource path="res://images/sprites/scenery_sheet.png" type="Texture" id=3]
[ext_resource path="res://images/sprites/start.png" type="Texture" id=4]
[ext_resource path="res://images/sprites/options.png" type="Texture" id=5]
[ext_resource path="res://images/sprites/quit.png" type="Texture" id=6]
[ext_resource path="res://Soundz/music/intro.wav" type="AudioStream" id=7]

[sub_resource type="GDScript" id=1]

script/source = "extends Button

# class member variables go here, for example:
# var a = 2
# var b = \"textvar\"

func _ready():
	# Called when the node is added to the scene for the first time.
	# Initialization here
	pass

#func _process(delta):
#	# Called every frame. Delta is time since last frame.
#	# Update game logic here.
#	pass
"

[node name="Node2D" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( 496.909, 418.428 )
scale = Vector2( 2.78094, 2.77214 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="ELF" type="Sprite" parent="." index="1"]

modulate = Color( 0, 0, 0, 1 )
light_mask = 0
position = Vector2( 450.669, 16.5878 )
scale = Vector2( 9.1162, 10.0996 )
z_index = -1
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]
__meta__ = {
"_edit_group_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 67.0
margin_top = 112.0
margin_right = 334.0
margin_bottom = 672.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1

[node name="Start" type="TextureButton" parent="VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 205.0
margin_right = 275.0
margin_bottom = 252.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
script = SubResource( 1 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Options" type="TextureButton" parent="VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 14.0
margin_top = 256.0
margin_right = 281.0
margin_bottom = 303.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="End Game" type="TextureButton" parent="VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -4.0
margin_top = 307.0
margin_right = 263.0
margin_bottom = 354.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
_sections_unfolded = [ "Grow Direction", "Rect", "Textures" ]

[node name="IntroMusic" type="AudioStreamPlayer2D" parent="." index="3"]

stream = ExtResource( 7 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1
_sections_unfolded = [ "Pause" ]

[connection signal="visibility_changed" from="ELF" to="." method="_on_Sprite_visibility_changed"]

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]

[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]

[connection signal="pressed" from="VBoxContainer/End Game" to="." method="_on_End_Game_pressed"]


